--- a/index.html
+++ b/index.html
@@ -2,172 +2,12 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>WKWebView Demo</title>
-    <style>
-        button {
-            display: block;
-            margin: 0 auto;
-            width: 300px;
-            height: 200px;
-            font-size: 30px;
-        }
-        button:last-child {
-            margin-top: 10px;
-        }
-        #camera-container {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.8);
-            display: none;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-        }
-        #video {
-            max-width: 90%;
-            max-height: 70%;
-        }
-        .camera-controls {
-            margin-top: 20px;
-        }
-        .camera-controls button {
-            display: inline-block;
-            width: 150px;
-            height: 80px;
-            margin: 0 10px;
-            font-size: 20px;
-        }
-    </style>
-    <script src="vconsole.min.js"></script>
-    <script>
-        // 初始化vConsole
-        var vConsole = new window.VConsole();
-        //var vConsole = new VConsole();
-        function showVConsole() {
-            vConsole.show();
-        }
-
-        // 点击按钮时调用nativeFuntion方法
-        function handleClick() {
-            //window.webkit.messageHandlers.nativeFuntion.postMessage("Hello from JavaScript!");
-            document.cookie = "eqid=deleted; path=/; domain=.baidu.com; expires=Sat, 28 Sep 2024 08:36:01 GMT";
-            //document.cookie = "__bsi=; max-age=3600";
-            alert(document.cookie);
-        }
-
-        function handleClick2() {
-            // 注册js方法供APP原生代码调用
-            WebViewJavascriptBridge.registerHandler('nativeMethodCallback', function(data, responseCallback) {
-                alert(data);
-                if (responseCallback) {
-                    responseCallback('JS method called');
-                }
-            });
-
-            // 调用原生方法
-            WebViewJavascriptBridge.callHandler('nativeMethod', 'Hello, world!', function(responseData) {
-                //alert("Received message from app: " + responseData);
-                //console.log("OC method called");
-                changeImage(responseData);
-            });
-        }
-
-        // 定义nativeFuntionCallback方法，供APP调用
-        function nativeFuntionCallback(message) {
-            alert("Received message from app: " + message);
-        }
-
-        function changeImage(imagePath) {
-            document.getElementById('dynamicImage').src = imagePath;
-        }
-
-        let video;
-        let mediaStream;
-        let currentDeviceId = null;
-        let isFlashOn = false;
-
-        async function openCamera() {
-            const constraints = {
-                video: {
-                    facingMode: currentDeviceId ? { exact: currentDeviceId } : 'environment',
-                    width: { ideal: 1280 },
-                    height: { ideal: 720 }
-                },
-                audio: false
-            };
-
-            try {
-                mediaStream = await navigator.mediaDevices.getUserMedia(constraints);
-                video = document.getElementById('video');
-                video.srcObject = mediaStream;
-                document.getElementById('camera-container').style.display = 'flex';
-            } catch (error) {
-                console.error('Error accessing camera:', error);
-            }
-        }
-
-        function takePhoto() {
-            const canvas = document.createElement('canvas');
-            canvas.width = video.videoWidth;
-            canvas.height = video.videoHeight;
-            const ctx = canvas.getContext('2d');
-            ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-            const photoUrl = canvas.toDataURL('image/jpeg');
-            document.getElementById('dynamicImage').src = photoUrl;
-            closeCamera();
-        }
-
-        async function toggleCamera() {
-            const devices = await navigator.mediaDevices.enumerateDevices();
-            const videoDevices = devices.filter(device => device.kind === 'videoinput');
-            let nextDeviceId;
-            if (currentDeviceId) {
-                const currentIndex = videoDevices.findIndex(device => device.deviceId === currentDeviceId);
-                nextDeviceId = videoDevices[(currentIndex + 1) % videoDevices.length].deviceId;
-            } else {
-                nextDeviceId = videoDevices[1]?.deviceId || videoDevices[0].deviceId;
-            }
-            currentDeviceId = nextDeviceId;
-            closeCamera();
-            openCamera();
-        }
-
-        async function toggleFlash() {
-            if (mediaStream) {
-                const track = mediaStream.getVideoTracks()[0];
-                const capabilities = track.getCapabilities();
-                if (capabilities.torch) {
-                    isFlashOn = !isFlashOn;
-                    track.applyConstraints({ video: { torch: isFlashOn } });
-                }
-            }
-        }
-
-        function closeCamera() {
-            if (mediaStream) {
-                mediaStream.getTracks().forEach(track => track.stop());
-            }
-            document.getElementById('camera-container').style.display = 'none';
-        }
-    </script>
+    <title>拍照页面</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="main.js"></script>
 </head>
 <body>
-    <button onclick="handleClick()">Click me!</button>
-    <button onclick="handleClick2()">show image</button>
-    <button onclick="showVConsole()">vConsole</button>
-    <button onclick="openCamera()">打开相机</button>
-    <img id="dynamicImage" alt="" />
-    <div id="camera-container">
-        <video id="video" autoplay></video>
-        <div class="camera-controls">
-            <button onclick="takePhoto()">拍照</button>
-            <button onclick="toggleFlash()">闪光灯</button>
-            <button onclick="toggleCamera()">切换摄像头</button>
-            <button onclick="closeCamera()">关闭</button>
-        </div>
-    </div>
+    <button onclick="openCamera()">拍照</button>
+    <img id="dynamicImage" alt="拍摄的照片" />
 </body>
 </html>
