--- a/index.html
+++ b/index.html
@@ -1,32 +1,26 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>拍照页面</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="main.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="contentarea">
-        <h1>MDN——navigator.mediaDevices.getUserMedia(): 静态照片拍摄演示</h1>
-        <p>
-            此示例演示了如何使用内置的网络摄像头来获取媒体流，并从中获取图像，以使用该图像来创建一个
-            PNG 图像。
-        </p>
-        <div class="camera">
-            <video id="video">视频流目前不可用。</video>
-            <button id="startbutton">拍摄照片</button>
-        </div>
-        <canvas id="canvas"></canvas>
-        <div class="output">
-            <img id="photo" alt="捕获的图像会显示在这里。" />
-        </div>
-        <p>
-            访问我们的文章：<a
-              href="https://developer.mozilla.org/zh-CN/docs/Web/API/WebRTC_API/Taking_still_photos">
-              使用 getUserMedia() 拍摄静态照片</a
-            >以详细了解此处使用的技术。
-        </p>
+      <h1>MDN——navigator.mediaDevices.getUserMedia(): 静态照片拍摄演示</h1>
+      <p>
+        此示例演示了如何使用内置的网络摄像头来获取媒体流，并从中获取图像，以使用该图像来创建一个
+        PNG 图像。
+      </p>
+      <div class="camera">
+        <video id="video">视频流目前不可用。</video>
+        <button id="startbutton">拍摄照片</button>
+      </div>
+      <canvas id="canvas"></canvas>
+      <div class="output">
+        <img id="photo" alt="捕获的图像会显示在这里。" />
+      </div>
     </div>
-</body>
+  </body>
 </html>
